[package]
name = "conc"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"

[dev-dependencies]
big_s = "1.0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
use_self = "deny"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
derive_partial_eq_without_eq = "deny"
impl_trait_in_params = "deny"
module_name_repetitions = "deny"
redundant_pub_crate = "deny"
str_to_string = "deny"
missing_errors_doc = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
