[package]
name = "conc"
version = "0.2.0"
edition = "2024"

[dependencies]
colored = "3.0.0"

[dev-dependencies]
big_s = "1.0.2"
cucumber = "0.22.1"
pretty = { package = "pretty_assertions", version = "1.4.1" }
shellwords = "1.1.0"
tempfile = "3.24.0"
tokio = { version = "1.49", features = ["fs", "io-util", "macros", "process", "rt"] }

[[test]]
name = "cucumber"
harness = false # allows Cucumber to print output instead of libtest
test = false # don't run this as part of "cargo test"

[profile.release]
opt-level = 's' # Optimize for size
lto = true # enable link-time optimization (removes dead code)
codegen-units = 1 # reduce codegen units to enable additional optimizations
panic = "unwind"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
use_self = "deny"

[lints.clippy]
pedantic = { priority = -1, level = "deny" }
derive_partial_eq_without_eq = "deny"
impl_trait_in_params = "deny"
module_name_repetitions = "deny"
redundant_pub_crate = "deny"
str_to_string = "deny"
missing_errors_doc = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
